--- a/app/src/main/res/layout/landing.xml
+++ b/app/src/main/res/layout/landing.xml
@@ -10,52 +10,59 @@ android:paddingRight="@dimen/activity_horizontal_margin"
 android:paddingTop="@dimen/activity_vertical_margin"
 tools:context=".LandingView">
 
-<EditText
-android:id="@+id/userName"
-android:layout_width="match_parent"
-android:layout_height="50dp"
-android:layout_marginLeft="10dp"
-android:hint="User Name"
-android:imeOptions="actionNext"
-android:paddingLeft="10dp"
-android:singleLine="true"
-/>
-<!-- create a Linear Layout with horizontal orientation and weightSum property -->
-<!-- second Child Layout -->
+    <ImageView
+    android:layout_width="match_parent"
+    android:layout_height="300dp"
+    android:src="@drawable/xseed_icon"
+    android:contentDescription="Xseed Logo"
+    />
 
-<EditText
-android:id="@+id/password"
-android:layout_width="match_parent"
-android:layout_height="50dp"
-android:layout_marginLeft="10dp"
-android:hint="Password"
-android:imeOptions="actionNext"
-android:paddingLeft="10dp"
-android:singleLine="true"
-android:inputType="textPassword"
-/>
+    <EditText
+    android:id="@+id/userName"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:layout_marginLeft="10dp"
+    android:hint="User Name"
+    android:imeOptions="actionNext"
+    android:paddingLeft="10dp"
+    android:singleLine="true"
+    />
+    <!-- create a Linear Layout with horizontal orientation and weightSum property -->
+    <!-- second Child Layout -->
 
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:layout_marginTop="20dp"
-android:orientation="horizontal"
-android:weightSum="2">
+    <EditText
+    android:id="@+id/password"
+    android:layout_width="match_parent"
+    android:layout_height="50dp"
+    android:layout_marginLeft="10dp"
+    android:hint="Password"
+    android:imeOptions="actionNext"
+    android:paddingLeft="10dp"
+    android:singleLine="true"
+    android:inputType="textPassword"
+    />
 
-<Button
-android:layout_width="0dp"
-android:layout_height="wrap_content"
-android:layout_marginRight="10dp"
-android:layout_weight="1"
-android:text="Register"
-android:onClick="handleRegister"/>
+    <LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_marginTop="20dp"
+    android:orientation="horizontal"
+    android:weightSum="2">
 
-<Button
-android:layout_width="0dp"
-android:layout_height="wrap_content"
-android:layout_marginLeft="10dp"
-android:layout_weight="1"
-android:text="Log In"
-android:onClick="handleLogin"/>
-</LinearLayout>
+        <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:layout_weight="1"
+        android:text="Register"
+        android:onClick="handleRegister"/>
+
+        <Button
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_weight="1"
+        android:text="Log In"
+        android:onClick="handleLogin"/>
+    </LinearLayout>
 </LinearLayout>
