--- a/app/src/main/res/layout/activity_app_view.xml
+++ b/app/src/main/res/layout/activity_app_view.xml
@@ -4,6 +4,18 @@
     android:layout_height="match_parent"
     tools:context=".AppView" >
 
+    <ImageButton
+        android:id="@+id/settingsButton"
+        android:layout_width="70dp"
+        android:layout_height="65dp"
+        android:cropToPadding="false"
+        android:scaleType="fitXY"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:src="@drawable/ic_settings"
+        style="?android:attr/borderlessButtonStyle"/>
+
     <FrameLayout
         android:id="@+id/appFragmentContainer"
         android:layout_width="fill_parent"
@@ -23,8 +35,8 @@
         android:layout_centerHorizontal="true"
         android:layout_alignParentTop="true"
         android:gravity="center"
-        android:paddingTop="5dp"
-        android:paddingBottom="5dp"
+        android:paddingTop="15dp"
+        android:paddingBottom="15dp"
         android:textSize="28sp"/>
 
 </RelativeLayout>
